# LLM-from-scratch

./: README.md  main.py  pyproject.toml
gpt_dataset/: gpt_dataset_v1.py
tokenizer/: simple_tokenizer_v1.py  simple_tokenizer_v2.py
